# starship-svn

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
